...
    text = { Text(text = stringResource(R.string.add_repetition)) },
  )
  SmallFloatingActionButton(
    containerColor = MaterialTheme.colorScheme.primary,
    onClick = on3xClick
  ) {
    Text(text = "3x")
  }
  SmallFloatingActionButton(
    containerColor = MaterialTheme.colorScheme.primary,
    onClick = on5xClick
  ) {
    Text(text = "5x")
...
